--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,88 +44,87 @@ $black: #000000;
 
 //****************************************ОБЩИЕ ПАРАМЕТРЫ***************************************************
 .container__page {
-	padding: 80px 0 100px;
+  padding: 80px 0 100px;
 }
 
 .title {
-	font-family: 'Georgia';
-	font-size: 35px;
-	line-height: 130%;
-	letter-spacing: 0.06em;
+  font-family: 'Georgia';
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
 }
 
 .button {
-	display: inline-block;
-	padding: 15px 45px;
-	background: $cream;
-	border-radius: 100px;
+  display: inline-block;
+  padding: 15px 45px;
+  background: $cream;
+  border-radius: 100px;
 
-	font-family: "Georgia";
-	font-size: 17px;
-	letter-spacing: 0.06em;
-	color: $dark;
+  font-family: "Georgia";
+  font-size: 17px;
+  letter-spacing: 0.06em;
+  color: $dark;
 
-	@include anim(0.5s, 0s);
+  @include anim(0.5s, 0s);
 }
 
 .button:hover {
-	background-color: $cream_light;
-	@include anim(0.5s, 0s);
+  background-color: $cream_light;
+  @include anim(0.5s, 0s);
 }
 
 .button__border {
-	display: inline-block;
-	background-color: transparent;
-	border: 2px solid $cream;
-	border-radius: 100px;
-	padding: 15px 45px;
+  display: inline-block;
+  background-color: transparent;
+  border: 2px solid $cream;
+  border-radius: 100px;
+  padding: 15px 45px;
 
 
-	font-family: Georgia;
-	font-size: 17px;
-	line-height: 130%;
-	letter-spacing: 0.06em;
-	color: $dark;
+  font-family: Georgia;
+  font-size: 17px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  color: $dark;
 
-	@include anim(0.5s, 0s);
+  @include anim(0.5s, 0s);
 }
 
 .button__border:hover {
-	background-color: $cream;
-	@include anim(0.5s, 0s);
+  background-color: $cream;
+  @include anim(0.5s, 0s);
 }
 
-.hover-link__light {
-	@include anim(0.5s, 0s);
-}
+.nav__link {
+  &--hover-light,
+  &--hover-dark {
+    @include anim(0.5s, 0s);
+  }
 
-.hover-link__light:hover {
-	color: $light;
-	@include anim(0.5s, 0s);
-}
+  &--hover-light:hover {
+    color: $light;
+    @include anim(0.5s, 0s);
+  }
 
-.hover-link__dark {
-	@include anim(0.5s, 0s);
-}
-
-.hover-link__dark:hover {
-	color: $dark;
-	@include anim(0.5s, 0s);
+  &--hover-dark:hover {
+    color: $dark;
+    @include anim(0.5s, 0s);
+  }
 }
 //****************************************ОБОЛОЧКА**********************************************************
 .wrapper {
-	background: url(../image/start/noise_transparent@2x.png), 
-	radial-gradient(100% 900% at 0% 0%, #5B483A 0%, #262425 100%),
-	linear-gradient(0deg, #211F20, #211F20);
+  background: url(../image/start/noise_transparent@2x.png), 
+  radial-gradient(100% 900% at 0% 0%, #5B483A 0%, #262425 100%),
+  linear-gradient(0deg, #211F20, #211F20);
 
-	min-height: 100%;
-	overflow: hidden;
+  min-height: 100%;
+  overflow: hidden;
 }
 //****************************************ОСНОВНАЯ СЕТКА****************************************************
 .container {
-	max-width: 80rem;
-	padding: 0 2.5rem;
-	margin: 0 auto;
+  max-width: 80rem;
+  padding: 0 2.5rem;
+  margin: 0 auto;
 }
 //****************************************АДАПТИВ****************************************************
 @import "media.scss";
