--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -32,7 +32,7 @@
 
 .contacts {
 	&__title {
-		font-family: "Georgia";
+		font-family: 'Georgia';
 		font-size: 35px;
 		line-height: 130%;
 		letter-spacing: 0.06em;
@@ -54,7 +54,7 @@
 
 .email {
 	&__text {
-		font-family: "Georgia";
+		font-family: 'Georgia';
 		font-size: 20px;
 		letter-spacing: 0.06em;
 		color: $cream;
@@ -64,7 +64,7 @@
 
 .phone {
 	&__text {
-		font-family: "Georgia";
+		font-family: 'Georgia';
 		font-size: 20px;
 		letter-spacing: 0.06em;
 		color: $cream;
@@ -74,7 +74,7 @@
 
 .locations {
 	&__title {
-		font-family: "Georgia";
+		font-family: 'Georgia';
 		font-size: 35px;
 		line-height: 130%;
 		letter-spacing: 0.06em;
@@ -96,7 +96,7 @@
 
 .boston {
 	&__text {
-		font-family: "Georgia";
+		font-family: 'Georgia';
 		font-size: 20px;
 		line-height: 110%;
 		letter-spacing: 0.055em;
@@ -106,7 +106,7 @@
 
 .london {
 	&__text {
-		font-family: "Georgia";
+		font-family: 'Georgia';
 		font-size: 20px;
 		letter-spacing: 0.055em;
 		color: $cream;
