--- a/scss/blocs.scss
+++ b/scss/blocs.scss
@@ -174,10 +174,8 @@
 		column-gap: 120px;
 		row-gap: 55px;
 	}
-}
 
-.list {
-	&__item {
+	&__list-item {
 		@include flexbox;
 		flex-direction: column;
 		align-items: center;
@@ -185,7 +183,7 @@
 		row-gap: 30px;
 	}
 
-	&__item-text {
+	&__list-text {
 		font-family: 'Georgia';
 		font-size: 20px;
 		text-align: center;
