--- a/scss/media.scss
+++ b/scss/media.scss
@@ -59,13 +59,11 @@
     &__list {
       column-gap: 60px;
     }
-  }
 
-  .list {
-    &__item {
-      width: 170px;
+		&__list-item {
+			width: 170px;
       height: 113px;
-    }
+		}
   }
 
   /*** Donation ***/
@@ -269,21 +267,19 @@
       column-gap: 30px;
       row-gap: 30px;
     }
-  }
-  
-  .list {
-    &__item {
-      row-gap: 20px;
+
+		&__list-item {
+			row-gap: 20px;
       width: 130px;
       height: 87px;
-    }
+		}
 
-		&__item-icon {
+		&__list-icon {
 			width: 50px;
       height: 50px;
 		}
 
-		&__item-text {
+		&__list-text {
 			font-size: 15px;
 		}
   }
